# meetdapp-data-backend

./: .gitignore  Dockerfile  README.md  main.py  nohup.out  pyproject.toml  requirements.txt  save_ipfs.py
api/: crud.py  database.py  main.py  models.py  save_ipfs.py
api/database/: database.py
api/models/: models.py
api/routers/: events.py  ipfs.py  test.py  users.py
api/services/: database.py  dummy_data.py  ipfs.py  s3_bucket.py  test_ipfs.py
