[tool.poetry]
name = "meetdapp"
version = "0.1.0"
description = ""
authors = ["rookiecol <juan.diegam@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
start = "app:main"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
pexpect = "^4.8.0"
sqlmodel = "^0.0.8"
lighthouseweb3 = "^0.1.4"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
